2007-11-30  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/operations.cc (ip_warn_about_reboot): Use
	ai_ti_operating_system_update as the title and ai_bd_create_backup
	for the backup button.

2007-11-29  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/repo.cc (cat_has_errors, cat_compare): New.
	(set_cat_list): Use them to sort the catalogues before
	displaying (N76651).

	* src/apt-worker-bin.cc (save_failed_catalogues): Do not sort
	catalogues here, it is now done when displaying them.
	(compare_failed_catalogues): Removed.

	* src/repo.cc (cat_text_func): Use "ai_ia_failed_catalogue"
	instead of "ai_ti_failed_catalogue" (N76642).

	* src/update-notifier.c (timout_id, blinking_timeout_id): Renamed
	former to latter for extra clarity.
	(setup_alarm): Return whether the alarm has been set.
	(setup_alarm_now): New, to be used as a timeout callback.
	(update_notifier_init): Call it after one minute.  The alarm
	framework should be ready to use by then.
	(update_notifier_finalize): Remove alarm_init and blinking timeout
	sources.

2007-11-28  Marius Vollmer  <marius.vollmer@nokia.com>

	* src/settings.cc (show_settings_dialog_flow): Use English instead
	of logical ids.  They are gone.  (N76583)

	* src/apt-worker-bin.cc (default_domain, DOMAIN_DEFAULT): Removed
	former, hard coded default domain with latter.
	(read_domain_conf): Don't set default_domain.
	(load_extra_info): Use DOMAIN_DEFAULT instead of
	default_domain (N76680).

	* src/main.cc (maybe_refresh_package_cache_without_user): Return
	silently when we are not idle.

	* src/operations.cc (install_packages): Reorganized interaction
	flow.  Installations that require a reboot are done last, and only
	one of them is done.  The close-apps flag is treated as a reboot
	request, suggest-backup is ignored.  Use a single dialog to inform
	user about closing apps, taking a backup and rebooting.  Check
	domain violations for each installation and not only once upfront